bad/assign_field_bool_arr_elem_class.example_compiler_output
ERROR
[1mbad/assign_field_bool_arr_elem_class.lat:9:20: [1;31merror: [0;1massigning to `boolean` from incompatible type `Y`[m
	(new C[1])[2].fld = new Y;
	                  [1;32m^[m
